Resolve more "failed to apply automatically" changes manually. Skipping xdr, as time stuff needs a closer look as it's been overhauled.

--- a/PATCHES/TODO
+++ b/PATCHES/TODO
@@ -3,6 +3,9 @@ TODO
 
 getboottime()
 	- needs  G_ and V_ variant and applied correctly in the right places.
+	- failed/xdr
 
+_SYSCTL_ROOT_NODE
+hostid?
 
 # end
