Manually merge more of the patches that failed to apply automatically.

--- a/PATCHES/TODO
+++ b/PATCHES/TODO
@@ -8,4 +8,14 @@ getboottime()
 _SYSCTL_ROOT_NODE
 hostid?
 
+failed/xej	sysv_msg ... skipped
+failed/xek	sysv_sem ... skipped
+failed/xel	sysy_shm ... skipped
+
+xes -> vfs_cache.c needs review;  just applied blindly so far.
+
+Lots of &prison0 vs. V_prison0  (no &)  but only in some places;  check that!
+
+failed/xfx	vnet.h changes *ouch*
+
 # end
