--- a/PATCHES/TODO
+++ b/PATCHES/TODO
@@ -14,7 +14,9 @@ failed/xel	sysy_shm ...
 	}}} all three need proper OSD save/restore if we keep it?
 
 xes -> vfs_cache.c needs review;  just applied blindly so far.
+	- compiles now :)
 
 Lots of &prison0 vs. V_prison0  (no &)  but only in some places;  check that!
+	- the osd calls take the prison0 argument twice; check those still
 
 # end
